FINISHED. ADDED RAKE AND PARTIAL AND FEATURES TESTS.

--- a/traffic-spy-skeleton/app/views/event_details.erb
+++ b/traffic-spy-skeleton/app/views/event_details.erb
@@ -1,10 +1,7 @@
 <h1><%=@name %></h1>
- <p><%=@event_total %></p>
+ <p>Total Number of Event Occurrences : <%=@event_total %></p>
  <p><%@event_hours.each do |event|  %>
   <%= "#{event[1]} event(s) at Hour: #{event[0]}" %>
 <% end %>
-
-
-
  </p>
-<!-- <h6><a href='/source' -->
+ <%= partial :'partials/welcome' %>
